fix(ArticlePageProps): changed section translateY walue, after testing on mobile

--- a/src/app/[slug]/page.module.sass
+++ b/src/app/[slug]/page.module.sass
@@ -28,7 +28,7 @@
         transform: translateY(84%)
         transition: transform 0.5s ease-in-out
         &:has(input:checked)
-            transform: translateY(320px)
+            transform: translateY(50px)
         
         @include break(lg)
             position: static
